Reverse singly linked list. Iteratively & recursively Closes #3

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>DegreeBetweenClockHands</module>
         <module>TreeDepth</module>
+        <module>ReverseSinglyLinkedList</module>
     </modules>
 
     <build>
