Roman numbers to arabic. #4

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>DegreeBetweenClockHands</module>
         <module>TreeDepth</module>
         <module>ReverseSinglyLinkedList</module>
+        <module>RomanianNumbersToArabic</module>
     </modules>
 
     <build>
