--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>ReverseSinglyLinkedList</module>
         <module>RomanNumbersToArabic</module>
         <module>PalindromeLinkedList</module>
+        <module>BubbleSort</module>
     </modules>
 
     <build>
