--- a/pom.xml
+++ b/pom.xml
@@ -15,45 +15,70 @@
         <module>RomanNumbersToArabic</module>
         <module>PalindromeLinkedList</module>
         <module>BubbleSort</module>
+        <module>TennisGame</module>
     </modules>
 
-    <build>
-    <plugins>
-        <!--  Make sure to use java 11  -->
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.8.1</version>
-            <configuration>
-                <target>11</target>
-                <source>11</source>
-                <release>11</release>
-            </configuration>
-        </plugin>
+    <properties>
+        <java.version>11</java.version>
+        <junit.version>5.7.0</junit.version>
+        <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
+        <maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
+        <maven.failsafe.plugin.version>2.22.0</maven.failsafe.plugin.version>
+    </properties>
 
-        <!-- Unit tests for Maven. (Plugin kicks-in in Maven TEST phase.) -->
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>2.22.0</version>
-            <configuration>
-                <argLine>
-                    --illegal-access=permit
-                </argLine>
-            </configuration>
-        </plugin>
-        <!-- Integration tests for Maven. (Plugin kicks-in for integration tests in Maven integration test phase) -->
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-failsafe-plugin</artifactId>
-            <version>2.22.0</version>
-            <configuration>
-                <argLine>
-                    --illegal-access=permit
-                </argLine>
-            </configuration>
-        </plugin>
-    </plugins>
+    <dependencies>
+        <!-- JUnit dependencies -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <!--  Make sure to use java 11  -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven.compiler.plugin.version}</version>
+                <configuration>
+                    <target>${java.version}</target>
+                    <source>${java.version}</source>
+                    <release>${java.version}</release>
+                </configuration>
+            </plugin>
+
+            <!-- Unit tests for Maven. (Plugin kicks-in in Maven TEST phase.) -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven.surefire.plugin.version}</version>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
+                </configuration>
+            </plugin>
+            <!-- Integration tests for Maven. (Plugin kicks-in for integration tests in Maven integration test phase) -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>${maven.failsafe.plugin.version}</version>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 
 </project>
